--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "nodemon": "^2.0.3"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
+    "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
-    "pg": "^8.0.3"
+    "pg": "^8.11.3",
+    "pg-promise": "^11.5.4"
   }
 }
